--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
         <link rel="stylesheet" href="style.css">
+        <meta name="author" content="Ondřej Svoboda">
         <title>Andrew's responsive web</title>
     </head>
 
@@ -53,15 +54,15 @@
             </div>
         </section>
         <section class="o-mne" id="o-mně">
-            <div class="content">
+            <div class="content-omne">
                 <div class="title"><span>O mně</span></div>
                 <div class="about-details"> 
                     <div class="left">
-                        <p>blablabla</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet odio ut mi fermentum efficitur. Praesent ut maximus felis. Aliquam nec turpis sit amet nibh egestas consequat. Vivamus rhoncus tortor nec lectus lacinia maximus. Vestibulum tincidunt justo id orci mollis posuere. Integer mauris nibh, dictum sed ligula non, aliquam facilisis lacus. Maecenas finibus risus sit amet vulputate fermentum. Mauris sit amet elit quis dolor ultricies vulputate. Aenean efficitur id mi sed auctor. Nullam laoreet risus leo, quis bibendum nisl egestas ac. Fusce ac nunc vel magna facilisis viverra. Nunc gravida tortor nisl, vitae egestas risus condimentum nec.</p>
                     </div>
-                    <img src="Satoru_Gojo.jpg" alt="velky"/>
+                    <img src="Satoru_Gojo.jpg" alt="velky" class="img-omne"/>
                     <div class="right">
-                        <p>bla</p>
+                        <p>Mauris eu urna sapien. Praesent hendrerit dui quis dictum pretium. Integer eu erat mi. Fusce urna ante, hendrerit a nisl a, rhoncus blandit nisi. Aenean rutrum lectus ac nisl pretium, ultrices interdum ipsum sollicitudin. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. In ullamcorper, justo nec volutpat finibus, risus nulla pellentesque velit, in faucibus orci neque ut magna. Curabitur iaculis ullamcorper scelerisque. Mauris dictum suscipit libero in pretium. Proin congue sapien at ultrices volutpat. Praesent sed diam ac nisl pulvinar faucibus at vel nunc. Nulla facilisi. Donec vitae odio id mauris cursus venenatis.</p>
                     </div>
                 </div>
             </div>
