--- a/index.html
+++ b/index.html
@@ -69,8 +69,23 @@
         </section>
         
         <section class="vzdelani" id="vzdělání">
-            <div class="content">
+            <div class="content-vzdelani">
                 <div class="title"><span>Vzdělání</span></div>
+                <div class="whole-ladovka">
+                    <img src="ladovka.jpg" alt="">
+                    <div class="text-ladovka">
+                        <h2>Základní škola Litoměřice, <span>Ladova 5</span></h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet odio ut mi fermentum efficitur. Praesent ut maximus felis. Aliquam nec turpis sit amet nibh egestas consequat. Vivamus rhoncus tortor nec lectus lacinia maximus. Vestibulum tincidunt justo id orci mollis posuere. Integer mauris nibh, dictum sed ligula non, aliquam facilisis lacus. Maecenas finibus risus sit amet vulputate fermentum. Mauris sit amet elit quis dolor ultricies vulputate. Aenean efficitur id mi sed auctor. Nullam laoreet risus leo, quis bibendum nisl egestas ac. Fusce ac nunc vel magna facilisis viverra. Nunc gravida tortor nisl, vitae egestas risus condimentum nec.</p>
+                    </div>
+                </div>
+                <div class="whole-kladenka">
+                    <img src="kladenka.jpeg" alt="">
+                    <div class="text-kladenka">
+                        <h2>Soukromá střední odborná škola <span>(1.KŠPA)</span> Litoměřice s.r.o.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet odio ut mi fermentum efficitur. Praesent ut maximus felis. Aliquam nec turpis sit amet nibh egestas consequat. Vivamus rhoncus tortor nec lectus lacinia maximus. Vestibulum tincidunt justo id orci mollis posuere. Integer mauris nibh, dictum sed ligula non, aliquam facilisis lacus. Maecenas finibus risus sit amet vulputate fermentum. Mauris sit amet elit quis dolor ultricies vulputate. Aenean efficitur id mi sed auctor. Nullam laoreet risus leo, quis bibendum nisl egestas ac. Fusce ac nunc vel magna facilisis viverra. Nunc gravida tortor nisl, vitae egestas risus condimentum nec.</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="zajmy" id="zájmy">
