--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                         <div class="topic">Škola</div>
                             <p>bla bla bla</p>
                     </div>
+                </div>
+                <div class="boxes-dva">
                     <div class="box">
                         <div class="icon">
                             <i class="fa-solid fa-futbol"></i>
@@ -114,7 +116,7 @@
                             <p>bla bla bla bla bla</p>
                     </div>
                 </div>
-                <div class="boxes-dva">
+                <div class="boxes-tri">
                     <div class="box">
                         <div class="icon">
                             <i class="fa-solid fa-scissors"></i>
