--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="o-mne.html">O mně</a>
                         <a href="vzdelani.html">Vzdělání</a>
                         <a href="zajmy.html">Zájmy</a>
-                        <a href="" class="nav-kontakt">Kontakt</a>
+                        <a href="kontakt.html" class="nav-kontakt">Kontakt</a>
                     </div>
                 </div>
             </nav>
