--- a/vzdelani.html
+++ b/vzdelani.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="navigace" id="nav-list">
-                        <a href="domovska-stranka.html" class="domovska">Domovská stránka</a>
+                        <a href="index.html" class="domovska">Domovská stránka</a>
                         <a href="o-mne.html">O mně</a>
                         <a href="#" class="vzdelani-active">Vzdělání</a>
                         <a href="zajmy.html">Zájmy</a>
