--- a/vzdelani.html
+++ b/vzdelani.html
@@ -18,7 +18,84 @@
                 <input type="checkbox" id="menu-toggle">
                 <label for="menu-toggle" class="hamburger">
                     <span></span>
+                    <span></span><!DOCTYPE html>
+
+<html lang="cs-cz">
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+        <link rel="stylesheet" href="style.css">
+        <meta http-equiv="refresh" content="10">
+        <meta name="author" content="Ondřej Svoboda">
+        <title>Andrew's responsive web</title>
+    </head>
+
+    <body>
+        <header>
+            <nav>
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
                     <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <div class="nav-container">
+                    <div class="divlogo">
+                        <p class="logo">Ondra</p>
+                    </div>
+
+                    <div class="navigace" id="nav-list">
+                        <a href="index.html" class="domovska">Domovská stránka</a>
+                        <a href="o-mne.html">O mně</a>
+                        <a href="#" class="vzdelani-active">Vzdělání</a>
+                        <a href="zajmy.html">Zájmy</a>
+                        <a href="kontakt.html" class="nav-kontakt">Kontakt</a>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <section class="vzdelani" id="vzdělání">
+            <div class="content-vzdelani">
+                <div class="title"><span>Vzdělání</span></div>
+                <div class="whole-ladovka">
+                    <img src="ladovka.jpg" alt="">
+                    <div class="text-ladovka">
+                        <h2>Základní škola Litoměřice, <span>Ladova 5</span></h2>
+                        <p>byla mně velice blízká nejen vzdáleností, měl jsem ji pouhých 1,5 km od bydliště, ale i celkově prostředím a atmosférou. Na prvním stupni mě do školy vozili rodiče, avšak od druhého stupně jsem si dopravu zařizoval sám. Většinou jsem chodil pěšky nebo využíval autobus.
+
+                            Co se týče prospěchu, moje známky byly průměrné, ale dostačující. Nejvíce mě bavil předmět matematika, který mi na základní škole opravdu sedl, i když dnes už pro mě nemá takové kouzlo. Celkově hodnotím tuto školu velmi pozitivně – prostředí bylo příjemné, spolužáci i učitelé byli normální, žádné projevy šikany, a kvalita výuky byla na velmi dobré úrovni. Učitelé nás také skvěle připravili na příjimací zkoušky, za což jsem jim dodnes věděčný.</p>
+                    </div>
+                </div>
+                <div class="whole-kladenka">
+                    <img src="kladenka.jpeg" alt="">
+                    <div class="text-kladenka">
+                        <h2>Soukromá střední odborná škola <span>(1.KŠPA)</span> Litoměřice s.r.o.</h2>
+                        <p>S příchodem na tuto školu jsem zažil výraznou změnu, nejen v oblasti vzdělání, ale i v mém osobním životě a charakteru. Tato změna nemusela nutně souviset přímo se školou, ale spíš s obdobím života, kterým jsem v té době procházel.
+
+                            Škola sama o sobě odpovídá své pověsti, ale zároveň bych řekl, že není tak hrozná, jak se občas říká. Učitelé jsou většinou normální, a i když si s některými rozumím více a s jinými méně, převažuje pocit, že se snaží předávat nám znalosti co nejlépe.
+                            
+                            Jsem na oboru IT, který mě velmi baví. Odborné předměty jsou na vysoké úrovni a opravdu mě motivují k tomu, abych se věnoval informatice naplno. Mě osobně tyto předměty hodně obohacují a myslím si, že mi dávají solidní základy pro budoucí profesní život.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="textdole">
+                <div class="social-icons-footer">
+                    <a href="https://www.tiktok.com/@ondraxsvoboda"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.youtube.com/@Abwinull"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://x.com/AbwiN_"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.instagram.com/ondraxsvoboda/?hl=cs"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <span>Created By
+                    <a href="#">Ondřej Svoboda</a>
+                 &#169; 2024 All Rights Reserved</span>
+            </div>
+        </footer>
+    </body>
+</html>
                     <span></span>
                 </label>
                 <div class="nav-container">
