--- a/zajmy.html
+++ b/zajmy.html
@@ -45,7 +45,7 @@
                             <i class="fa-solid fa-school"></i>
                         </div>
                         <div class="topic">Škola</div>
-                            <p>bla bla bla</p>
+                            <p>Studuji obor IT na 1.KŠPA. Odborné předměty mě baví a připravují na budoucnost.</p>
                     </div>
                 </div>
                 <div class="boxes-dva">
@@ -54,14 +54,14 @@
                             <i class="fa-solid fa-futbol"></i>
                         </div>
                         <div class="topic">Fotbal</div>
-                            <p>bla bla bla bla</p>
+                            <p>Hraji za tým Lovosice. Udržuji si fyzickou kondici a týmového ducha. Plus je to pro mě odpočinek od všeho ostatního, co se mi v životě děje</p>
                     </div>
                     <div class="box">
                         <div class="icon">
                             <i class="fa-solid fa-computer"></i>
                         </div>
                         <div class="topic">Počítačové hry</div>
-                            <p>bla bla bla bla bla</p>
+                            <p>Rád si zahraji videohry rekreačně. Už nehraju soutěžně, ale hry mě stále baví jako zábava a relax.</p>
                     </div>
                 </div>
                 <div class="boxes-tri">
@@ -70,14 +70,14 @@
                             <i class="fa-solid fa-scissors"></i>
                         </div>
                         <div class="topic">Stříhání videí</div>
-                            <p>bla bla bla bla bla bla</p>
+                            <p>Občas sestříhám videa, což mě stále baví. Dříve jsem dělal montáže z Valorantu na YouTube, ale teď už se tomu nevěnuji pravidelně.</p>
                     </div>
                     <div class="box">
                         <div class="icon">
                             <i class="fa-solid fa-money-bill-wave"></i>
                         </div>
                         <div class="topic">Brigáda</div>
-                            <p>bla bla bla bla bla bla bla</p>
+                            <p>Pracuji jako kasař v KFC. Získávám cenné zkušenosti v komunikaci a zvládání stresu.</p>
                     </div>
                 </div>
             </div>
