--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-960628<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="cs-cz">
+    <!-- hlavičkové elementy -->
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,9 @@
         <title>Andrew's responsive web</title>
     </head>
 
+    <!-- viditelná část pro uživatele -->
     <body>
+        <!-- navigace plus hamburger menu pro mobily atd. -->
         <header>
             <nav>
                 <input type="checkbox" id="menu-toggle">
@@ -36,6 +39,7 @@
                 </div>
             </nav>
         </header>
+        <!-- hl. část dokumentu -->
         <section class="home" id="home">
             <div class="home-content">
                 <h1>Ahoj, tady <span>Ondra</span></h1>
@@ -54,6 +58,7 @@
                 <a href="https://www.instagram.com/ondraxsvoboda/?hl=cs"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </section>
+        <!-- footer/patička -->
         <footer>
             <div class="textdole">
                 <div class="social-icons-footer">
