--- a/kontakt.html
+++ b/kontakt.html
@@ -36,6 +36,7 @@
                 </div>
             </nav>
         </header>
+        <!-- formulář -->
         <section class="kontakt" id="kontakt">
             <div class="content-form">
                 <div class="title">
