--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <span></span>
                     <span></span>
                 </label>
+                
                 <div class="nav-container">
                     <div class="divlogo">
                         <p class="logo">Ondra</p>
                     </div>
-
                     <div class="navigace" id="nav-list">
                         <a href="#" class="domovska-active">Domovská stránka</a>
                         <a href="o-mne.html">O mně</a>
@@ -67,9 +67,7 @@
                     <a href="https://x.com/AbwiN_"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://www.instagram.com/ondraxsvoboda/?hl=cs"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <span>Created By
-                    <a href="#">Ondřej Svoboda</a>
-                 &#169; 2024 All Rights Reserved</span>
+                <span>&copy; 2025 <a href="#">Ondřej Svoboda</a> Všechna práva vyhrazena.</span>
             </div>
         </footer>
     </body>
