--- a/vzdelani.html
+++ b/vzdelani.html
@@ -69,9 +69,7 @@
                     <a href="https://x.com/AbwiN_"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://www.instagram.com/ondraxsvoboda/?hl=cs"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <span>Created By
-                    <a href="#">Ondřej Svoboda</a>
-                 &#169; 2024 All Rights Reserved</span>
+                <span>&copy; 2025 <a href="#">Ondřej Svoboda</a> Všechna práva vyhrazena.</span>
             </div>
         </footer>
     </body>
